# phoenix

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  settings.py
phoenix/api/: primes.py  tasks.py
phoenix/models/: __init__.py  prime.py  task.py
phoenix/services/: database.py  parallel.py  primes.py  tasks.py
tests/: conftest.py  primes_lower_1000.txt  test_main.py
tests/phoenix/api/: test_prime.py  test_task.py
tests/phoenix/services/: test_database.py  test_parallel.py  test_primes.py  test_tasks.py
